--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Color Mixer - Interactive Color Blending Tool</title>
+    <title>Color Mixer Game - Match the Target Color!</title>
 
     <!-- Bootstrap CSS -->
     <link
@@ -20,140 +20,142 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <!-- Color Mixer Game Section -->
+    <section id="game" class="py-5 bg-light">
       <div class="container">
-        <a class="navbar-brand" href="#" id="brandLink">
-          <i class="bi bi-palette me-2"></i>
-          Color Mixer
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#mixer">Mixer</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
-    <!-- Hero Section -->
-    <section class="hero-section">
-      <div class="container">
-        <div class="row align-items-center min-vh-75">
-          <div class="col-lg-6">
-            <h1 class="display-4 fw-bold mb-4">Create Beautiful Color Combinations</h1>
-            <p class="lead mb-4">
-              Mix and blend colors interactively to discover stunning color palettes for your projects.
-            </p>
-            <button class="btn btn-primary btn-lg" onclick="scrollToMixer()">
-              <i class="bi bi-play-circle me-2"></i>
-              Start Mixing
-            </button>
-          </div>
-          <div class="col-lg-6">
-            <div class="color-preview-large" id="heroColorPreview"></div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Color Mixer Section -->
-    <section id="mixer" class="py-5 bg-light">
-      <div class="container">
-        <div class="row">
-          <div class="col-12 text-center mb-5">
-            <h2 class="display-5 fw-bold">Color Mixer</h2>
-            <p class="lead">Blend two colors and see the magic happen</p>
+        <!-- Game Header -->
+        <div class="row mb-4">
+          <div class="col-12 text-center">
+            <h2 class="display-5 fw-bold">Color Mixer Game</h2>
+            <p class="lead">Match the target color by mixing available colors</p>
           </div>
         </div>
 
-        <div class="row g-4">
-          <!-- Color 1 Input -->
-          <div class="col-md-4">
-            <div class="card h-100 shadow-sm">
-              <div class="card-body text-center">
-                <h5 class="card-title">Color 1</h5>
-                <div class="color-input-group">
-                  <input type="color" class="form-control form-control-color" id="color1" value="#ff6b6b" />
-                  <input type="text" class="form-control mt-2" id="color1Hex" value="#ff6b6b" placeholder="#000000" />
-                </div>
-                <div class="color-preview mt-3" id="color1Preview"></div>
+        <!-- Game Stats -->
+        <div class="row mb-4">
+          <div class="col-md-3">
+            <div class="card text-center">
+              <div class="card-body">
+                <h6 class="card-title">Level</h6>
+                <h3 class="text-primary" id="currentLevel">1</h3>
               </div>
             </div>
           </div>
-
-          <!-- Mix Controls -->
-          <div class="col-md-4">
-            <div class="card h-100 shadow-sm">
-              <div class="card-body text-center">
-                <h5 class="card-title">Mix Ratio</h5>
-                <div class="mix-controls">
-                  <label for="mixRatio" class="form-label">Blend Amount</label>
-                  <input type="range" class="form-range" id="mixRatio" min="0" max="100" value="50" />
-                  <div class="d-flex justify-content-between">
-                    <small class="text-muted">Color 1</small>
-                    <small class="text-muted" id="ratioValue">50%</small>
-                    <small class="text-muted">Color 2</small>
-                  </div>
-                </div>
-                <button class="btn btn-outline-primary mt-3" onclick="randomizeColors()">
-                  <i class="bi bi-shuffle me-2"></i>
-                  Random Colors
-                </button>
+          <div class="col-md-3">
+            <div class="card text-center">
+              <div class="card-body">
+                <h6 class="card-title">Score</h6>
+                <h3 class="text-success" id="currentScore">0</h3>
               </div>
             </div>
           </div>
-
-          <!-- Color 2 Input -->
-          <div class="col-md-4">
-            <div class="card h-100 shadow-sm">
-              <div class="card-body text-center">
-                <h5 class="card-title">Color 2</h5>
-                <div class="color-input-group">
-                  <input type="color" class="form-control form-control-color" id="color2" value="#4ecdc4" />
-                  <input type="text" class="form-control mt-2" id="color2Hex" value="#4ecdc4" placeholder="#000000" />
-                </div>
-                <div class="color-preview mt-3" id="color2Preview"></div>
+          <div class="col-md-3">
+            <div class="card text-center">
+              <div class="card-body">
+                <h6 class="card-title">Attempts</h6>
+                <h3 class="text-warning" id="attemptsLeft">10</h3>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card text-center">
+              <div class="card-body">
+                <h6 class="card-title">Time</h6>
+                <h3 class="text-info" id="timeLeft">5:00</h3>
               </div>
             </div>
           </div>
         </div>
 
-        <!-- Result Section -->
-        <div class="row mt-5">
+        <!-- Target Color -->
+        <div class="row mb-4">
           <div class="col-12">
             <div class="card shadow">
               <div class="card-body text-center">
-                <h4 class="card-title mb-4">Mixed Color Result</h4>
+                <h4 class="card-title mb-3">Target Color</h4>
                 <div class="row align-items-center">
-                  <div class="col-lg-8">
-                    <div class="mixed-color-preview" id="mixedColorPreview"></div>
+                  <div class="col-lg-6">
+                    <div class="target-color-preview" id="targetColorPreview"></div>
                   </div>
-                  <div class="col-lg-4">
-                    <div class="color-info">
-                      <h6>Color Details</h6>
+                  <div class="col-lg-6">
+                    <h5 id="levelName">Primary Colors</h5>
+                    <p class="mb-2" id="levelDescription">Mix primary colors to create secondary colors</p>
+                    <div class="alert alert-info" id="levelHint">
+                      <i class="bi bi-lightbulb me-2"></i>
+                      <span id="hintText">Try mixing red and yellow to get orange</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Available Colors Palette -->
+        <div class="row mb-4">
+          <div class="col-12">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title mb-3">Available Colors</h5>
+                <div class="row" id="availableColorsContainer">
+                  <!-- Available colors will be populated here -->
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Mixing Area -->
+        <div class="row mb-4">
+          <div class="col-12">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title mb-3">Mixing Canvas</h5>
+                <div class="row" id="mixingCanvas">
+                  <!-- Mixing slots will be populated here -->
+                </div>
+                <div class="text-center mt-3">
+                  <button class="btn btn-primary me-2" onclick="mixColors()">
+                    <i class="bi bi-palette me-2"></i>
+                    Mix Colors
+                  </button>
+                  <button class="btn btn-secondary" onclick="clearMixingCanvas()">
+                    <i class="bi bi-trash me-2"></i>
+                    Clear Canvas
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Result Area -->
+        <div class="row mb-4">
+          <div class="col-12">
+            <div class="card shadow">
+              <div class="card-body">
+                <h4 class="card-title mb-3">Your Mixed Color</h4>
+                <div class="row align-items-center">
+                  <div class="col-lg-6">
+                    <div class="mixed-color-preview" id="playerColorPreview"></div>
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="color-comparison">
+                      <h6>Color Match</h6>
+                      <div class="progress mb-3" style="height: 20px">
+                        <div class="progress-bar" id="matchProgress" role="progressbar" style="width: 0%">0%</div>
+                      </div>
                       <p class="mb-1">
-                        <strong>Hex:</strong>
-                        <span id="mixedHex">#9c5a5a</span>
-                      </p>
-                      <p class="mb-1">
-                        <strong>RGB:</strong>
-                        <span id="mixedRgb">rgb(156, 90, 90)</span>
+                        <strong>Your Color:</strong>
+                        <span id="playerHex">#000000</span>
                       </p>
                       <p class="mb-3">
-                        <strong>HSL:</strong>
-                        <span id="mixedHsl">hsl(0, 27%, 48%)</span>
+                        <strong>Target Color:</strong>
+                        <span id="targetHex">#ff8000</span>
                       </p>
-                      <button class="btn btn-success btn-sm" onclick="copyToClipboard()">
-                        <i class="bi bi-copy me-2"></i>
-                        Copy Hex
+                      <button class="btn btn-success" id="submitBtn" onclick="submitColor()" disabled>
+                        <i class="bi bi-check-circle me-2"></i>
+                        Submit Color
                       </button>
                     </div>
                   </div>
@@ -162,42 +164,22 @@
             </div>
           </div>
         </div>
-      </div>
-    </section>
 
-    <!-- About Section -->
-    <section id="about" class="py-5">
-      <div class="container">
+        <!-- Game Controls -->
         <div class="row">
-          <div class="col-lg-8 mx-auto text-center">
-            <h2 class="display-5 fw-bold mb-4">About Color Mixer</h2>
-            <p class="lead mb-4">
-              Color Mixer is an interactive tool that allows you to blend two colors and see the result in real-time.
-              Perfect for designers, developers, and anyone working with colors.
-            </p>
-            <div class="row g-4 mt-4">
-              <div class="col-md-4">
-                <div class="feature-card">
-                  <i class="bi bi-palette display-4 text-primary mb-3"></i>
-                  <h5>Real-time Mixing</h5>
-                  <p>See color changes instantly as you adjust the blend ratio</p>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <div class="feature-card">
-                  <i class="bi bi-eye-fill display-4 text-primary mb-3"></i>
-                  <h5>Multiple Formats</h5>
-                  <p>View colors in Hex, RGB, and HSL formats</p>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <div class="feature-card">
-                  <i class="bi bi-clipboard display-4 text-primary mb-3"></i>
-                  <h5>Easy Copy</h5>
-                  <p>Copy color values with one click</p>
-                </div>
-              </div>
-            </div>
+          <div class="col-12 text-center">
+            <button class="btn btn-outline-primary me-2" onclick="showHint()">
+              <i class="bi bi-lightbulb me-2"></i>
+              Show Hint
+            </button>
+            <button class="btn btn-outline-secondary me-2" onclick="skipLevel()">
+              <i class="bi bi-skip-forward me-2"></i>
+              Skip Level
+            </button>
+            <button class="btn btn-outline-danger" onclick="resetGame()">
+              <i class="bi bi-arrow-clockwise me-2"></i>
+              Reset Game
+            </button>
           </div>
         </div>
       </div>
