fix local server

--- a/src/index.html
+++ b/src/index.html
@@ -209,6 +209,6 @@
     ></script>
 
     <!-- Custom JavaScript -->
-    <script src="js/color-mixer.js"></script>
+    <script type="module" src="app.ts"></script>
   </body>
 </html>
