--- a/src/index.html
+++ b/src/index.html
@@ -139,6 +139,10 @@
               <i class="bi bi-lightbulb me-2"></i>
               Show Hint
             </button>
+            <button class="btn btn-outline-success me-2" onclick="showSolution()">
+              <i class="bi bi-gear me-2"></i>
+              Show Solution
+            </button>
             <button class="btn btn-outline-secondary me-2" onclick="skipLevel()">
               <i class="bi bi-skip-forward me-2"></i>
               Skip Level
