multiple color alog for result color

--- a/src/index.html
+++ b/src/index.html
@@ -155,7 +155,8 @@
                   <div class="col-md-6">
                     <div class="alert alert-info mb-0" id="algorithmDescription">
                       <small>
-                        <strong>Subtractive CMY:</strong> Realistic pigment behavior - most like real paint mixing
+                        <strong>Subtractive CMY:</strong>
+                        Realistic pigment behavior - most like real paint mixing
                       </small>
                     </div>
                   </div>
